--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,28 @@
         android:layout_height="wrap_content"
         android:text="@string/btn_capture"
         android:id="@+id/capture"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="0dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_stop"
+        android:id="@+id/stop"
+        android:layout_toRightOf="@+id/capture"
+        android:layout_marginTop="0dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14dp"
+        android:id="@+id/flv_url"
+        android:layout_below="@+id/capture"
+        android:layout_marginTop="0dp"/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/capture"
+        android:layout_below="@+id/flv_url"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="0dp">
 
