support set the bitrate.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14dp"
+        android:id="@+id/vbitrate"
+        android:layout_toRightOf="@+id/stop"
+        android:layout_marginTop="0dp"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14dp"
         android:id="@+id/flv_url"
         android:layout_below="@+id/capture"
         android:layout_marginTop="0dp"/>
